syntax = "proto3";

package massa.api.v1;

import "slot.proto";

option cc_enable_arenas = true;
option csharp_namespace = "Massa.Api.V1";
option go_package = "google.golang.org/genproto/massa/api/v1/endorsement;endorsement";
option java_multiple_files = true;
option java_package = "com.massa.api.v1";
option objc_class_prefix = "ENDORSEMENT";
option php_namespace = "Massa\\Api\\V1";

// An endorsement, as sent in the network
message Endorsement {
    // object field
    Slot slot = 1;
    // string field
    fixed32 index = 2;
    // Hash of endorsed block
    // This is the parent in thread `self.slot.thread` of the block in which the endorsement is included
    string endorsed_block = 3;
}

// message struct
message EndorsementContent {
    // string field
    string sender_public_key = 1;
    // object field
    Slot slot = 2;
    // float field
    fixed32 index = 3;
    // string field
    string endorsed_block = 4;
}

// message struct
message EndorsementId {
    // string field
    string value = 1;
}

// message struct
message SecureShareEndorsement {
    // object field
    Endorsement content = 1;
    // Content in sharable, deserializable form. Is used in the secure verification protocols
    bytes serialized_data = 2;
    // A cryptographically generated value using `serialized_data` and a public key.
    string signature = 3;
    // The public-key component used in the generation of the signature
    string content_creator_pub_key = 4;
    // Derived from the same public key used to generate the signature
    string content_creator_address = 5;
    // A secure hash of the data. See also [massa_hash::Hash]
    string id = 6;
}
